--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -30,7 +30,7 @@
       <a href="./resources" class="btn">Resources</a>
       <a href="./schedule" class="btn">Schedule</a>
       <a href="./results" class="btn">Results</a>
-      <a href="./Scientific publications" class="btn">Scientific publications</a>
+      <a href="./#scientific-publications" class="btn">Scientific publications</a>
       <a href="./previous" class="btn">Previous edition</a>
       <a href="https://sites.google.com/view/iberlef2020/home" class="btn" target="_blank">IberLEF 2020</a>
 
