--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -25,10 +25,11 @@
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
 
       <a href="./" class="btn">Home</a>      
+      <a href="./workshop" class="btn">Workshop</a>
       <a href="./tasks" class="btn">Subtasks</a>
       <a href="./submission" class="btn">Submission</a>
       <a href="./resources" class="btn">Resources</a>
-      <a href="./schedule" class="btn">Schedule</a>
+      <a href="./#schedule" class="btn">Schedule</a>
       <a href="./results" class="btn">Results</a>
       <a href="./#scientific-publications" class="btn">Publications</a>
       <a href="./previous" class="btn">Previous edition</a>
